+ 中文排版优化

--- a/src/layouts/_default/single.html
+++ b/src/layouts/_default/single.html
@@ -41,7 +41,9 @@
                 <a href="##"><i class="material-icons">share</i></a>
               </div>
             </div>
-            {{ .Content }}
+            <div class="postContent">
+              {{ .Content }}
+            </div>
             <hr>
             <div class="tags">
               {{ range .Params.tags }}
