--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -259,7 +259,8 @@ section.single.cover {
 main.single {
   article.post {
     .card-title {
-      font-size: 3em
+      font-size: 3em;
+      line-height: 64px;
     }
     hr {
       margin: 2em auto;
@@ -282,6 +283,18 @@ main.single {
     background-color: #eeeeee;
     display: inline-block;
   }
+  div.postContent{
+    p {
+      margin: 1em auto;
+    }
+    li {
+      padding: 1em;
+    }
+    li:before {
+      content: '> ';
+    }
+  }
+
   div.info {
     margin: 0px 1em;
     p {
