--- a/src/layouts/404.html
+++ b/src/layouts/404.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="{{ with .Site.LanguageCode }}{{ . }}{{ else }}en-us{{ end }}">
-{{ partial "head.html" . }}
+<head>
+  {{ partial "head-common.html" . }}
+</head>
 <body class="mat-green-yellow">
   404 works
 {{ partial "body-script.html" . }}
