--- a/src/layouts/_default/list.html
+++ b/src/layouts/_default/list.html
@@ -3,7 +3,7 @@
 {{ partial "head.html" . }}
 <body class="mat-green-yellow">
   {{ partial "header.html" . }}
-    
+    list works
   {{ partial "footer.html" . }}
   {{ partial "body-script.html" . }}
 </body>
