--- a/src/layouts/_default/single.html
+++ b/src/layouts/_default/single.html
@@ -36,8 +36,8 @@
                 </div>
                 <div class="info">
                   <p>{{ with $user.name }}{{ $user.name }}{{ else }}Mr. Nobody{{ end }}</p>
-                  <small>Posted on: <span class="date">{{ .PublishDate }} ago</span></small> <br>
-                  <small>Modified on: <span class="date">{{ .Lastmod }} ago</span></small>
+                  <small>Posted on: <time class="date">{{ .PublishDate }}</time> ago</small> <br>
+                  <small>Modified on: <time class="date">{{ .Lastmod }}</time>ago</small>
                 </div>
               </div>
               <div class="flexSpacer"></div>
