* some scripts are also scoped now

--- a/src/layouts/_default/single.html
+++ b/src/layouts/_default/single.html
@@ -63,5 +63,6 @@
     </div>
   </main>
   {{ partial "body-script.html" . }}
+  <script src="{{ "js/single.js" | absURL }}"></script>
 </body>
 </html>  
