--- a/src/layouts/partials/header.html
+++ b/src/layouts/partials/header.html
@@ -3,17 +3,20 @@
 <header>
   <nav class="navTop">
     <a href="#" data-target="navMobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-    <a class="waves-effect waves-primary btn-flat brand-logo"><i class="icomoon icon-wcnexus"></i></a>
+    <a class="waves-effect waves-primary btn-flat brand-logo">
+      <i class="icomoon icon-wcnexus"></i>
+      <span class="hide-on-med-and-down">wcnexus</span>
+    </a>
     <div class="hide-on-med-and-down">
     {{ range $navs }}
       <a class="waves-effect waves-primary btn-flat" href="{{ .link }}">{{ .title }}</a>
     {{ end }}
     </div>
     <div class="flexSpacer"></div>
-    <div class="hide-on-med-and-down">
+    <div>
       <a class="waves-effect waves-primary btn-flat holder" href="https://github.com/valorad/wcnexus.com" target="_blank">
         <i class="iconfont icon-github"></i>
-        <span>Github</span>
+        <span class="hide-on-med-and-down">Github</span>
       </a>
     </div>
   </nav>
