--- a/src/layouts/partials/head-common.html
+++ b/src/layouts/partials/head-common.html
@@ -6,4 +6,5 @@
 <link rel="stylesheet" href="{{ "css/main.css" | absURL }}">
 <link rel="stylesheet" href="{{ "css/iconfont.css" | absURL }}">
 <link rel="stylesheet" href="{{ "css/icomoon.css" | absURL }}">
+<link rel="shortcut icon" href="{{ "images/favicon.ico" | absURL }}" type="image/x-icon">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
