* footer social style sync

--- a/src/layouts/partials/footer.html
+++ b/src/layouts/partials/footer.html
@@ -9,10 +9,10 @@
         <span><a href="https://github.com/valorad/wcnexus-venture/blob/master/LICENSE" title="MIT License"><i class="iconfont icon-libra"></i></a></span>
       </p>
       <div class="social">
-        {{ with $social.weibo }}<a href="{{ . }}"><i class="iconfont icon-weibo"></i></a>{{ end }}
-        {{ with $social.zhihu }}<a href="{{ . }}"><i class="iconfont icon-zhihu"></i></a>{{ end }}
-        {{ with $social.twitter }}<a href="{{ . }}"><i class="iconfont icon-twitter"></i></a>{{ end }}
-        {{ with $social.github }}<a href="{{ . }}"><i class="iconfont icon-github"></i></a>{{ end }}
+        {{ with $social.weibo }}<a href="{{ . }}" target="_blank"><i class="iconfont icon-weibo"></i></a>{{ end }}
+        {{ with $social.zhihu }}<a href="{{ . }}" target="_blank"><i class="iconfont icon-zhihu"></i></a>{{ end }}
+        {{ with $social.twitter }}<a href="{{ . }}" target="_blank"><i class="iconfont icon-twitter"></i></a>{{ end }}
+        {{ with $social.github }}<a href="{{ . }}" target="_blank"><i class="iconfont icon-github"></i></a>{{ end }}
       </div>
     </div>
   </div>
