--- a/src/layouts/_default/list.html
+++ b/src/layouts/_default/list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="{{ with .Site.LanguageCode }}{{ . }}{{ else }}en-us{{ end }}">
-{{ partial "head.html" . }}
+{{ partial "head-common.html" . }}
 <body class="mat-green-yellow">
   {{ partial "header.html" . }}
     list works
