* style adjustment of content

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -14,7 +14,7 @@
 body {
   margin: 0px;
   padding: 0px;
-  font-family: Roboto, noto-sans-cjk, Helvetica Neue, sans-serif;
+  font-family: Roboto, "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif, "Noto Sans CJK SC";
   font-size: 14px;
   font-weight: 500;
   background-color: #f0f0f0;
@@ -85,7 +85,7 @@ ul {
 }
 
 div.content {
-  max-width: 1200px;
+  max-width: 900px;
   margin: 0px auto;
 }
 
