--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -68,7 +68,7 @@
                 <p>{{ .Summary }}...</p>
               </div>
               <div class="card-action">
-                <a href="{{ .Permalink | absLangURL }}">Read more</a>
+                <a href="{{ .Permalink | absLangURL }}">{{ T "readMore" }}</a>
               </div>
             </article>
           </div>
