--- a/src/layouts/partials/header.html
+++ b/src/layouts/partials/header.html
@@ -17,11 +17,11 @@
     <footer class="actions">
       <a class="waves-effect waves-primary btn-flat holder dropdown-trigger" data-target='navDDChangeLang'>
         <i class="material-icons lang">language</i>
-        <span class="hide-on-med-and-down">Change Language</span>
+        <span class="hide-on-med-and-down">{{ T "changeLang" }}</span>
       </a>
       <a class="waves-effect waves-primary btn-flat holder" href="https://github.com/valorad/wcnexus.com" target="_blank">
         <i class="iconfont icon-github"></i>
-        <span class="hide-on-med-and-down">Github</span>
+        <span class="hide-on-med-and-down">{{ T "github" }}</span>
       </a>
 
       <!-- Dropdown Structure -->
