--- a/src/assets/scss/scoped/single.scss
+++ b/src/assets/scss/scoped/single.scss
@@ -39,6 +39,7 @@ main.single {
     p {
       margin: 2em auto;
       line-height: 2em;
+      font-size: 16px;
     }
     li {
       padding: 1em;
