--- a/src/layouts/partials/body-script.html
+++ b/src/layouts/partials/body-script.html
@@ -1,2 +1,1 @@
-<script src="{{ "js/vendor.js" | absURL }}"></script>
-<script src="{{ "js/main.js" | absURL }}"></script>
+<script src="{{ "js/base.js" | absURL }}"></script>
