--- a/src/assets/scss/_theme.scss
+++ b/src/assets/scss/_theme.scss
@@ -1,4 +1,4 @@
-@import '~materialize-css/sass/components/color-variables';
+@import '../../../node_modules/materialize-css/sass/components/color-variables';
 
 $badge-bg-color: map-get($green, 'base');
 $secondary-color: map-get($yellow, 'base');
