--- a/src/layouts/partials/head-common.html
+++ b/src/layouts/partials/head-common.html
@@ -3,7 +3,7 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>{{ .Title }}</title>
 {{ .Hugo.Generator }}
-<link rel="stylesheet" href="{{ "css/main.css" | absURL }}">
+<link rel="stylesheet" href="{{ "css/styles.css" | absURL }}">
 <link rel="stylesheet" href="{{ "css/iconfont.css" | absURL }}">
 <link rel="stylesheet" href="{{ "css/icomoon.css" | absURL }}">
 <link rel="shortcut icon" href="{{ "images/favicon.ico" | absURL }}" type="image/x-icon">
