--- a/src/assets/scss/_theme.scss
+++ b/src/assets/scss/_theme.scss
@@ -14,6 +14,9 @@ $secondary-color: map-get($yellow, 'base');
   .primary-text {
     color: $localPrimary;
   }
+  .primary-border-left {
+    border-left-color: $localPrimary;
+  }
   .accent {
     background-color: $localAccent;
   }
